--- a/public/index.html
+++ b/public/index.html
@@ -9,28 +9,36 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./favicon/apple-touch-icon.png"
+      href="%PUBLIC_URL%/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./favicon/favicon-32x32.png"
+      href="%PUBLIC_URL%/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./favicon/favicon-16x16.png"
+      href="%PUBLIC_URL%/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="./favicon/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/favicon/manifest.json" />
     <link
       rel="mask-icon"
-      href="./favicon/safari-pinned-tab.svg"
+      href="%PUBLIC_URL%/favicon/safari-pinned-tab.svg"
       color="#5bbad5"
     />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
